chore: Update project status to 85% complete

--- a/_meta/project.yaml
+++ b/_meta/project.yaml
@@ -31,18 +31,18 @@ overview:
 status:
   lifecycle_stage: "active"
   health: "healthy"
-  percent_complete: 40
-  last_status_update: "2025-11-19"
+  percent_complete: 85
+  last_status_update: "2025-11-21"
   
-  current_phase: "implementation"
+  current_phase: "ready-for-use"
   start_date: "2025-10-29"
   target_completion: "2025-12-31"
   
   active_milestone:
-    name: "Core CLI Implementation"
-    description: "Build PowerShell CLI with project type classification and basic scaffolding"
-    target_date: "2025-12-15"
-    percent_complete: 35
+    name: "Phase 3: Enhanced Automation - Complete"
+    description: "Lifecycle automation, health checks, data hygiene, testing, documentation"
+    target_date: "2025-12-21"
+    percent_complete: 100
 
 people:
   owner: "Christopher Clements"
